[package]
name = "blister"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Rust (and WebAssembly) implementation of the Blister Beat Saber playlist format"

[workspace]
members = [
    "format",
]

[dependencies]
blister_format = { path = "format" }
byteorder = "1"
chrono = "0.4"
constant_time_eq = "0.1"
thiserror = "1"

[dependencies.flate2]
version = "1"
default-features = false
features = ["miniz_oxide"]
