[package]
name = "blister_format"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
byteorder = "1"
constant_time_eq = "0.1"
fnv = "1"
thiserror = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = [
    "deref",
    "deref_mut",
    "from",
]
